Fixed animation bug
Changed the rules for the pulse animation to prevent a bug that made it look weird in different browsers.

--- a/style.css
+++ b/style.css
@@ -299,16 +299,22 @@ main   {
 @keyframes pulse
 {
     0% {
-        height: 30px;
-        width: 30px;
+        -moz-transform: scale(0.8);
+        -ms-transform: scale(0.8);
+        -webkit-transform: scale(0.8);
+        transform: scale(0.8);
     }
     90% {
-        height: 50px;
-        width: 50px;
+        -moz-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
     }
     100% {
-        height: 30px;
-        width: 30px;
+        -moz-transform: scale(0.8);
+        -ms-transform: scale(0.8);
+        -webkit-transform: scale(0.8);
+        transform: scale(0.8);
     }
 }
 
